<resources>
    <string name="app_name">Abbit</string>
    <string name="registro">Registro</string>
    <string name="action_settings">Settings</string>
    <string name="texto_convocatoria">Convocatorias</string>
    <string name="texto_formatos_admin">Formatos generados</string>
    <string name="hacer_encabezado_convocatoria_asunto">Asunto</string>
    <string name="hacer_encabezado_convocatoria_condominio">Condominio</string>
    <string name="hacer_encabezado_convocatoria_ubicacion_interna">Ubicación interna</string>
    <string name="hacer_encabezado_convocatoria_fecha_inicial">Fecha de inicio</string>
    <string name="hacer_encabezado_convocatoria_ubicacion">Ubicación</string>
    <string name="hacer_encabezado_convocatoria_nueva_convocatoria">Nueva convocatoria</string>
    <string name="hacer_encabezado_convocatoria_boton_siguiente">Siguiente</string>
    <string name="hacer_encabezado_convocatoria_hora_inicial">Hora de inicio</string>
    <string name="hacer_encabezado_convocatoria_firma">Firma</string>
    <string name="orden_del_dia_parametros_faltantes">Aún no hay puntos adicionales a tratar</string>
    <string name="orden_del_dia_definir_nombre_de_archivo">Escriba el nombre del archivo</string>
    <string name="orden_del_dia_numeracion_incorrecta">La numeración es incorrecta</string>
    <string name="orden_del_dia_formato_incorrecto">El formato es incorrecto</string>
    <string name="orden_del_dia_definir_orden_del_dia">Orden del día</string>
    <string name="orden_del_dia_error_en_nombre_de_archivo">Nombre no válido</string>
    <string name="orden_del_dia_creando_pdf">Creando PDF</string>
    <string name="crear_convocatoria_fecha_incorrecta">La fecha es incorrecta</string>
    <string name="crear_convocatoria_hora_incorrecta">La hora es incorrecta</string>
    <string name="crear_convocatoria_datos_incorrectos">Debe llenar todos los datos</string>
    <string name="crear_convocatoria_sitio_en_construccion">Sitio en construcción :)</string>
    <string name="crear_convocatoria_error_pdf">No se guardó a PDF</string>
    <string name="crear_convocatoria_archivo_creado">Archivo creado n.n</string>
    <string name="dialogo_entrada_texto_cancelar">Cancelar</string>
    <string name="dialogo_entrada_texto_aceptar">Aceptar</string>
    <string name="dialogo_entrada_texto_modificar_texto">Modifique el elemento</string>
    <string name="dialogo_entrada_texto_agregar_texto">Agregue elemento</string>
    <string name="dialogo_informacion_confirmar_salida">¿Está seguro de salir? Se perderán los datos al moemento (sistema de borrador en contrucción)</string>
    <string name="dialogo_remocion_elementos_titulo">Seleccione elementos a remover</string>
    <string name="barra_de_bocados_aviso">Aviso</string>
    <string name="menu_convocatoria_agregar_punto">Agregar punto</string>
    <string name="menu_convocatoria_quitar_punto">Quitar punto</string>
    <string name="menu_convocatoria_hecho">Hecho</string>

    <string name="signup_usuario">Nombres</string>
    <string name="signup_ap_paterno">Apellido paterno</string>
    <string name="signup_ap_materno">Apellido materno</string>
    <string name="signup_escolaridad">Escolaridad</string>
    <string name="signup_tipo_de_administrador">Tipo de administrador</string>
    <string name="signup_remuneracion">Remuneración</string>
    <string name="startup_email">E-mail</string>
    <string name="signup_date_of_birth">Fecha de nacimiento</string>
    <string name="signup_registrar">Registrar</string>
    <string name="startup_pass">Contraseña</string>
    <string name="signup_pista_password">La contraseña debe tener al menos 5 caracteres, incluir una mayúscula, un número y un caracter no alfanumérico: !@#$&amp;*</string>

    <string name="estructura_de_convocatoria_convocatoria_titulo">C O N V O C A T O R I A</string>
    <string name="estructura_de_convocatoria_primera_convocatoria">PRIMERA CONVOCATORIA</string>
    <string name="estructura_de_convocatoria_segunda_convocatoria">SEGUNDA CONVOCATORIA</string>
    <string name="estructura_de_convocatoria_tercera_convocatoria">TERCERA CONVOCATORIA</string>
    <string name="estructura_de_convocatoria_introduccion">Con fundamento en los artículos 29, 32 Fracción III, Inciso c), y demás relativos aplicables de la Ley de la Propiedad en Condominio de Inmuebles para el Distrito Federal, se convoca a </string>
    <string name="estructura_de_convocatoria_relleno_1">, que se llevará a cabo el día </string>
    <string name="estructura_de_convocatoria_relleno_2">ESTA ASAMBLEA SE LLEVARÁ A CABO A LAS </string>
    <string name="estructura_de_convocatoria_relleno_3">horas, BAJO LA SIGUIENTE ORDEN DEL DÍA:</string>
    <string name="estructura_de_convocatoria_relleno_4">EN CASO DE NO HABER QUÓRUM EN PRIMERA CONVOCATORIA, SE LLEVARÁ A CABO LA ASAMBLEA EN SEGUNDA CONVOCATORIA CON EL MISMO ORDEN DEL DÍA, LUGAR Y FECHA A LAS </string>
    <string name="estructura_de_convocatoria_relleno_5">EN CASO DE NO HABER QUÓRUM EN PRIMERA CONVOCATORIA, SE LLEVARÁ A CABO LA ASAMBLEA EN TERCERA CONVOCATORIA CON EL MISMO ORDEN DEL DÍA, LUGAR Y FECHA A LAS </string>
    <string name="estructura_de_convocatoria_relleno_6">Al respecto la Ley de Propiedad en Condominio  de inmuebles para el Distrito Federal establece:

Art. 32. "Las convocatorias para la celebración de asambleas generales se harán de acuerdo a las siguientes disposiciones:

IV.- cuando la asamblea se celebre en virtud de la primera convocatoria se requerirá de una asistencia del 75% de los condóminos, cuando se realice en segunda convocatoria el quórum se integrará con la mayoría simple del total de condóminos, en caso de la tercera convocatoria la asamblea se declarará legalmente instalada con los condóminos que asistan y las resoluciones se tomarán por la mayoría de los presentes;

Las determinaciones adoptadas por las asambleas en los términos de esta ley, del reglamento del condominio y de las demás disposiciones legales aplicables, obligan a todos los condóminos, incluyendo a los ausentes y disidentes.

Las convocatorias para la celebración de asambleas ordinarias, se notificarán con siete días naturales de anticipación a la fecha de la primera convocatoria. Entre la primer y la segunda convocatoria deberá mediar un plazo de treinta minutos; el mismo plazo deberá transcurrir entre la segunda y la tercera convocatoria.</string>
    <string name="estructura_de_convocatoria_relleno_7">Ciudad de México a </string>
    <string name="estructura_de_convocatoria_primer_punto_unamovible">1.- Lista de asistencia e instalación de la asamblea.</string>
    <string name="estructura_de_convocatoria_segundo_punto_inamovible">2.- Nombramiento de presidente, secretario y escrutador de la asamblea.</string>
    <string name="formato_de_ingreso_razon_de_pago">Seleccione razón de pago:</string>
    <string name="formato_de_ingreso_concepto">Concepto:</string>
    <string name="formato_de_ingreso_pista_monto">Monto</string>
    <string name="formato_de_ingreso_pista_nombre">Nombre</string>
    <string name="formato_de_ingreso_confirmar">Confirmar</string>
    <string name="formato_de_egreso_razon_de_pago">Concepto:</string>
    <string name="formato_de_egreso_pista_nombre">A favor de</string>
    <string name="title_activity_formatos_admin">Formatos Admin</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="formato_de_egreso_header">Egreso</string>
    <string name="formato_de_ingreso_header">Ingreso</string>
    <string name="title_activity_formatos_lobby">FormatosLobby</string>
    <string name="title_activity_configuraciones">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="signup_contacto">Teléfono</string>
    <string name="signup_habilitar_profesion">Cuento con profesión</string>
    <string name="signup_profesion">Profesión</string>
</resources>
