<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/formato_de_ingreso_label_spiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="26sp"
        android:layout_alignParentTop="true"
        android:text="@string/formato_de_ingreso_razon_de_pago"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/formato_de_ingreso_razon_de_pago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginEnd="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginTop="12sp"
        android:layout_below="@+id/formato_de_ingreso_label_spiner"/>

    <TextView
        android:id="@+id/formato_de_ingreso_etiqueta_concepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formato_de_ingreso_razon_de_pago"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="12sp"
        android:layout_marginRight="12sp"
        android:text="@string/formato_de_ingreso_concepto"
        android:textSize="20sp"/>
    
    <Spinner
        android:id="@+id/formato_de_ingreso_concepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginLeft="12sp"
        android:layout_marginEnd="12sp"
        android:layout_marginRight="12sp"
        android:layout_marginTop="12sp"
        android:layout_below="@+id/formato_de_ingreso_etiqueta_concepto"/>

    <EditText
        android:id="@+id/formato_de_ingreso_monto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formato_de_ingreso_concepto"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="12sp"
        android:hint="@string/formato_de_ingreso_pista_monto"
        android:background="@drawable/fondo_edit_text_no_opaque"
        android:inputType="numberDecimal"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/formato_de_ingreso_piso_monto"
        android:layout_width="wrap_content"
        android:layout_height="1sp"
        android:layout_below="@id/formato_de_ingreso_monto"
        android:layout_alignStart="@+id/formato_de_ingreso_monto"
        android:layout_alignLeft="@+id/formato_de_ingreso_monto"
        android:layout_alignEnd="@+id/formato_de_ingreso_monto"
        android:layout_alignRight="@+id/formato_de_ingreso_monto"
        android:background="@drawable/piso_1"/>

    <EditText
        android:id="@+id/formato_de_ingreso_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formato_de_ingreso_piso_monto"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="12sp"
        android:hint="@string/formato_de_ingreso_pista_nombre"
        android:background="@drawable/fondo_edit_text_no_opaque"
        android:textSize="20sp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/formato_de_ingreso_piso_nombre"
        android:layout_width="wrap_content"
        android:layout_height="1sp"
        android:layout_below="@id/formato_de_ingreso_nombre"
        android:layout_alignStart="@+id/formato_de_ingreso_nombre"
        android:layout_alignLeft="@+id/formato_de_ingreso_nombre"
        android:layout_alignEnd="@+id/formato_de_ingreso_nombre"
        android:layout_alignRight="@+id/formato_de_ingreso_nombre"
        android:background="@drawable/piso_1"/>

    <Button
        android:id="@+id/format_de_ingreso_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formato_de_ingreso_piso_nombre"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="12sp"
        android:text="@string/formato_de_ingreso_confirmar"/>

</RelativeLayout>