<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <EditText
            android:id="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/fondo_edit_text_no_opaque"
            android:hint="@string/hacer_encabezado_convocatoria_asunto"
            android:inputType="text"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/hacer_encabezado_convocatoria_piso_asunto"
            android:layout_width="wrap_content"
            android:layout_height="1sp"
            android:layout_alignEnd="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignRight="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignStart="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignLeft="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_below="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:background="@drawable/piso_1"/>

        <EditText
            android:id="@+id/hacer_encabezado_convocatoria_entrada_ubicacion_interna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:textSize="20sp"
            android:inputType="text"
            android:background="@drawable/fondo_edit_text_no_opaque"
            android:layout_below="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:hint="@string/hacer_encabezado_convocatoria_ubicacion_interna"/>
        <TextView
            android:id="@+id/hacer_encabezado_convocatoria_piso_ubicacion_interna"
            android:layout_width="wrap_content"
            android:layout_height="1sp"
            android:layout_alignEnd="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignRight="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignStart="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignLeft="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_below="@+id/hacer_encabezado_convocatoria_entrada_ubicacion_interna"
            android:background="@drawable/piso_1"/>

        <TextView
            android:id="@+id/hacer_encabezado_convocatoria_entrada_fecha_inicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:paddingTop="14sp"
            android:background="@drawable/fondo_edit_text_no_opaque"
            android:layout_below="@+id/hacer_encabezado_convocatoria_entrada_ubicacion_interna"
            android:hint="@string/hacer_encabezado_convocatoria_fecha_inicial"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/hacer_encabezado_convocatoria_piso_fecha_inicio"
            android:layout_width="wrap_content"
            android:layout_height="1sp"
            android:layout_alignEnd="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignRight="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignStart="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignLeft="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_below="@+id/hacer_encabezado_convocatoria_entrada_fecha_inicial"
            android:background="@drawable/piso_1"/>

        <TextView
            android:id="@+id/hacer_encabezado_convocatoria_entrada_hora_inicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:paddingTop="14sp"
            android:background="@drawable/fondo_edit_text_no_opaque"
            android:layout_below="@+id/hacer_encabezado_convocatoria_entrada_fecha_inicial"
            android:hint="@string/hacer_encabezado_convocatoria_hora_inicial"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/hacer_encabezado_convocatoria_piso_hora_inicial"
            android:layout_width="wrap_content"
            android:layout_height="1sp"
            android:layout_alignEnd="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignRight="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignStart="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_alignLeft="@+id/hacer_encabezado_convocatoria_entrada_asunto"
            android:layout_below="@+id/hacer_encabezado_convocatoria_entrada_hora_inicial"
            android:background="@drawable/piso_1"/>

        <Button
            android:id="@+id/hacer_encabezado_convocatoria_boton_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:layout_below="@+id/hacer_encabezado_convocatoria_entrada_hora_inicial"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/hacer_encabezado_convocatoria_boton_siguiente"/>

    </RelativeLayout>
</ScrollView>